virt01/manual/home-assistant/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: ha

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ha
  template:
    metadata:
      labels:
        app: ha
#      annotations:
#        k8s.v1.cni.cncf.io/networks: '[ { "name": "br1400-ha" }]'
    spec:
      containers:
        - name: home-assistant
          # image: homeassistant/home-assistant:2026.6.4
          image: ghcr.io/home-assistant/home-assistant:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8123
          volumeMounts:
          - name: ha-config-pv
            mountPath: /config
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          resources: {}
        
        - name: zwave-js-ui
          image: zwavejs/zwave-js-ui:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 10
            httpGet:
              httpHeaders:
              - name: Accept
                value: text/plain
              path: /health
              port: js-ui-http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
          - containerPort: 8091
            name: js-ui-http
            protocol: TCP
          - containerPort: 3000
            name: js-ui-websocket
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /usr/src/app/store
            name: zwave-data


        - name: music-assistant-server
          image: ghcr.io/music-assistant/server:2.8.8
          imagePullPolicy: Always
          ports:
          - containerPort: 8095
            name: webui
          - containerPort: 8097
            name: api
          volumeMounts:
          - name: ma-data-pv
            mountPath: /data
          - name: ma-library
            mountPath: /media
          resources: {}

        # - name: code-server
        #   image: linuxserver/code-server
        #   imagePullPolicy: Always
        #   env:
        #     - name: PUID
        #       value: "0"
        #     - name: PGID
        #       value: "0"
        #     - name: TZ
        #       value: "America/New_York"
        #     - name: DEFAULT_WORKSPACE
        #       value: "/ha"
        #   ports:
        #   - containerPort: 8443
        #   volumeMounts:
        #   - name: cs-config-pv
        #     mountPath: /config
        #   - name: cs-data-pv
        #     mountPath: /data
        #   - name: ha-config-pv
        #     mountPath: /ha/config
        #   - name: esphome-config-pv
        #     mountPath: /esphome-config
        #   resources: {}

        - name: esphome
          image: esphome/esphome
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6052
            timeoutSeconds: 1
          ports:
          - containerPort: 6052
            name: http
            protocol: TCP
          volumeMounts:
          - mountPath: /config
            name: esphome-config-pv
          - mountPath: /cache
            name: esphome-cache-pv
          resources: {}
          
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: ha-config-pv
          persistentVolumeClaim:
            claimName: ha-config-pvc
        - name: cs-config-pv
          persistentVolumeClaim:
            claimName: cs-config-pvc
        - name: cs-data-pv
          persistentVolumeClaim:
            claimName: cs-data-pvc
        - name: esphome-config-pv
          persistentVolumeClaim: 
            claimName: esphome-config-pvc
        - name: esphome-cache-pv
          persistentVolumeClaim:
            claimName: esphome-cache-pvc
        - name: ma-data-pv
          persistentVolumeClaim: 
            claimName: ma-data-pvc
        - name: ma-library
          hostPath:
            path: /mnt/ssd01/Music
            type: Directory
        - name: zwave-data
          persistentVolumeClaim:
            claimName: zwave-data-pvc
