virt01/manual/home-assistant/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ha-ui
  labels:
    app: ha
spec:
  ports:
    - port: 8123
      protocol: TCP
      name: ha-ui-port
  selector:
    app: ha
---
apiVersion: v1
kind: Service
metadata:
  name: ha-code-svc
  labels:
    app: ha
spec:
  ports:
    - port: 8443
      protocol: TCP
      name: ha-code-port
  selector:
    app: ha
---
apiVersion: v1
kind: Service
metadata:
  name: esphome-svc
  labels:
    app: ha
spec:
  ports:
    - port: 6052
      protocol: TCP
      name: esphome-port
  selector:
    app: ha
---
apiVersion: v1
kind: Service
metadata:
  name: js-ui-svc
  labels:
    app: ha
spec:
  ports:
    - name: js-ui-http
      port: 8091
      protocol: TCP
    - name: js-ui-websocket
      port: 3000
      targetPort: js-ui-websocket
  selector:
    app: ha
