virt01/manual/home-assistant/home-assistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ingress
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: ha.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: ha-ui
            port:
              number: 8123
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ha.k3s.nf.lab
    secretName: ha-cert-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ext
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: dual.nforcer.com
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ha.nforcer.com
      secretName: ha-ext-tls
  rules:
    - host: ha.nforcer.com
      http:
        paths:
        - backend:
            service:
              name: ha-ui
              port:
                number: 8123
          path: /
          pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hacode-ingress
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: hacode.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: ha-code-svc
            port:
              number: 8443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hacode.k3s.nf.lab
    secretName: hacode-cert-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome-ingress
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: esphome.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: esphome-svc
            port:
              number: 6052
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - esphome.k3s.nf.lab
    secretName: esphome-cert-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: js-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: js-ui.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: js-ui-svc
            port:
              number: 8091
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - js-ui.k3s.nf.lab
    secretName: js-ui-cert-tls
